--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,17 @@ file(GLOB_RECURSE SOURCES
 )
 
 add_executable(Chelton ${SOURCES}
-        src/MyWindow.cpp
-        src/MyWindow.h
-        src/Server.cpp
+        src/CookieClicker.h
+        src/CookieClicker.cpp
         src/Server.h
+        src/Server.cpp
         src/Client.cpp
         src/Client.h
+        src/StartView.cpp
+        src/StartView.h
+
+
+
 )
 
 target_link_libraries(Chelton ${GTKMM_LIBRARIES})
